Register updatred